--- a/sunshine/src/main/res/layout/watchface.xml
+++ b/sunshine/src/main/res/layout/watchface.xml
@@ -7,36 +7,39 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="45dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/hour"
-            android:textSize="40sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=":"/>
+            android:textSize="40sp" />
 
         <TextView
-            android:textSize="40sp"
-            android:id="@+id/minute"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=":"/>
+            android:text=":"
+            android:textSize="40sp" />
+
         <TextView
-            android:textSize="40sp"
+            android:id="@+id/minute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textSize="40sp" />
+
+        <TextView
             android:id="@+id/second"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="40sp" />
 
     </LinearLayout>
 
@@ -44,29 +47,38 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:layout_gravity="center" />
+        android:layout_margin="16dp"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-light" />
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/weather_icon"
+            android:layout_gravity="start"
+            android:layout_margin="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/weather_icon"/>
+            android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/high_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/high_temp"/>
+            android:layout_gravity="end"
+            android:layout_margin="16dp"
+            android:fontFamily="sans-serif-light" />
 
         <TextView
+            android:id="@+id/low_temp"
+            android:layout_gravity="end"
+            android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/low_temp"/>
+            android:fontFamily="sans-serif-light" />
     </LinearLayout>
 
 </LinearLayout>
