--- a/sunshine/src/main/res/layout/watchface.xml
+++ b/sunshine/src/main/res/layout/watchface.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
         <TextView
@@ -18,21 +18,9 @@
             android:textSize="40sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=":"
-            android:textSize="40sp" />
-
-        <TextView
             android:id="@+id/minute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=":"
             android:textSize="40sp" />
 
         <TextView
@@ -47,9 +35,9 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif-light" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -59,7 +47,7 @@
 
         <ImageView
             android:id="@+id/weather_icon"
-            android:layout_gravity="start"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -69,13 +57,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_margin="16dp"
+            android:layout_margin="8dp"
+            android:textSize="25dp"
             android:fontFamily="sans-serif-light" />
+
 
         <TextView
             android:id="@+id/low_temp"
             android:layout_gravity="end"
-            android:layout_margin="16dp"
+            android:layout_margin="8dp"
+            android:textSize="25dp"
+            android:textColor="@color/grey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light" />
